Moved main.css back out to root directory (for now), removed inlined event handler from search bar, additional linting

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 .DS_Store
 node_modules/
-fonts/Museo/museo-500.eot
-fonts/Museo/museo-500.svg
-fonts/Museo/museo-500.ttf
-fonts/Museo/museo-500.woff
+fonts/
